# ros2_lingua

./: .gitignore  CONTRIBUTING.md  README.md  ruff.toml
.github/: integration-tests.yml  lint.yml  unit-tests.yml
.github/workflows/: assign.yml  integration-tests.yml  lint.yml  unit-tests.yml
docs/: index.html
examples/: integration_examples.py
examples/humanoid_demo/: humanoid_demo.py
ros2_lingua/: package.xml  setup.cfg  setup.py
ros2_lingua/launch/: lingua.launch.py
ros2_lingua/ros2_lingua/: capability_mixin.py  dispatch_config.py  dispatcher_node.py  grounding_node.py  lingua_action_server.py
ros2_lingua/test/: test_grounding_pipeline.py  test_lingua_launch.py  test_mock_nodes.py
ros2_lingua_core/: package.xml  setup.py
ros2_lingua_core/ros2_lingua_core/: __init__.py  backends.py  errors.py  grounding.py  recovery.py  registry.py  schema.py  validator.py
ros2_lingua_core/tests/: test_core.py
ros2_lingua_cpp/: CMakeLists.txt  package.xml
ros2_lingua_cpp/include/ros2_lingua_cpp/: capability.hpp  lingua_mixin.hpp
ros2_lingua_cpp/test/: test_capability.cpp  test_compilation.cpp
ros2_lingua_interfaces/: CMakeLists.txt  package.xml
ros2_lingua_interfaces/action/: LinguaAction.action
ros2_lingua_interfaces/msg/: ExecutionStatus.msg
ros2_lingua_interfaces/srv/: GroundInstruction.srv  LinguaService.srv  RegisterCapability.srv  UpdateState.srv
ros2_lingua_mock/: package.xml  setup.cfg  setup.py
ros2_lingua_mock/launch/: demo.launch.py
ros2_lingua_mock/ros2_lingua_mock/: balance_node.py  cli.py  dashboard_server.py  manipulation_node.py  navigation_node.py  robot_monitor.py  speech_node.py
ros2_lingua_mock/ros2_lingua_mock/dashboard/: index.html
