<?xml version="1.0"?>
<package format="3">
  <name>ros2_lingua</name>
  <version>0.1.0</version>
  <description>ROS 2 nodes for the ros2_lingua LLM-to-action bridge</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ros2_lingua_core</depend>
  <depend>ros2_lingua_interfaces</depend>

  <test_depend>pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
