<?xml version="1.0"?>
<package format="3">
  <name>ros2_lingua_core</name>
  <version>0.1.0</version>
  <description>
    ROS-agnostic core of ros2_lingua: schema, registry, and grounding engine.
    No ROS 2 dependencies — independently testable.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
