<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_lingua_interfaces</name>
  <version>0.1.0</version>
  <description>
    Custom ROS 2 message, service, and action definitions for ros2_lingua.
    Includes LinguaAction, LinguaService, RegisterCapability, GroundInstruction,
    UpdateState, and ExecutionStatus.
  </description>
  <maintainer email="gpurahan@gmail.com">purahan</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://purahan.github.io/ros2_lingua/</url>
  <url type="repository">https://github.com/purahan/ros2_lingua</url>
  <url type="bugtracker">https://github.com/purahan/ros2_lingua/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
